# vimeodlpy

./: README.md  pyproject.toml
src/vimeodl/: __init__.py  cli.py  downloader.py  exceptions.py  logger.py  parser.py  utils.py
src/vimeodl-py/: __init__.py  downloader.py
src/vimeodlpy/: __init__.py  cli.py  downloader.py  exceptions.py  logger.py  parser.py  utils.py
tests/: __init__.py
